--- a/frontend/src/Styles/Sidenav.css
+++ b/frontend/src/Styles/Sidenav.css
@@ -1,18 +1,22 @@
 .sidenav{
     height:100vh;
-    width:280px;
+    width:235px;
     padding:0px 15px;
     background-image:linear-gradient(#2a1c5a, #4b3a6e);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     color:white;
+    position:sticky;
+    top:0;
+    left:0;
 }
 hr{
     margin-bottom:10px;
 }
 .title{
     font-size:18px;
-    padding-top:10px;
+    padding-top:13px;
     font-weight:500;
+    text-align: center;
 }
 .actorInfo div p{
     margin:0px;
@@ -42,4 +46,12 @@ hr{
  .sidenavItem a:hover{
     background-color: white;
     color:#2a1c5a;
+}
+
+@media (width<922px){
+    .sidenav{
+        position:fixed;
+        top:0;
+        right:0;
+    }
 }
