--- a/frontend/src/Styles/AdminConnexionScreen.css
+++ b/frontend/src/Styles/AdminConnexionScreen.css
@@ -34,14 +34,14 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(125deg, #ff5821 10%, rgba(255, 88, 33, 0.8));
+  background: linear-gradient(125deg, var(--primaryColor) 10%, rgba(255, 88, 33, 0.8));
   opacity: 0.8;
 }
 .btn-connexion {
-  background-color: #ff5821;
-  border-color: #ff5821;
+  background-color: var(--primaryColor);
+  border-color: var(--primaryColor);
 }
 .btn-connexion:hover {
   background-color: rgba(243, 63, 3, 0.85);
-  border-color: #ff5821;
+  border-color: var(--primaryColor);
 }
