--- a/frontend/src/Styles/Sidenav.css
+++ b/frontend/src/Styles/Sidenav.css
@@ -2,12 +2,13 @@
     height:100vh;
     width:235px;
     padding:0px 15px;
-    background-image:linear-gradient(#2a1c5a, #4b3a6e);
+    background-image:linear-gradient(var(--secondaryColor), #4b3a6e);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     color:white;
     position:sticky;
     top:0;
     left:0;
+    z-index:999;
 }
 hr{
     margin-bottom:10px;
@@ -45,7 +46,7 @@ hr{
 
  .sidenavItem a:hover{
     background-color: white;
-    color:#2a1c5a;
+    color:var(--secondaryColor);
 }
 
 @media (width<922px){
