--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,7 @@ body {
 
 .headerIconEmpty,
 .headerIconFull {
-  padding: 5px 15px;
+  padding: 4px 15px;
 }
 
 .headerIconFull {
@@ -47,6 +47,16 @@ body {
 }
 
 /* Navbar Header*/
+
+.navbarHeader {
+  position: sticky;
+
+  top: 0px;
+  padding-top: 2px !important;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
 .logo img {
   height: 50px;
@@ -87,6 +97,25 @@ body {
   height: 30px;
   width: 30px;
   color: #595656;
+}
+
+.navContentCascader {
+  margin: none;
+  padding: none;
+  z-index: 10000000;
+}
+
+.navContentCascader span.ant-menu-title-content,
+.navContentCascader .ant-menu-submenu-arrow {
+  font-size: 17px;
+  color: #595656;
+  font-weight: 500;
+}
+
+.navContentCascader:hover span.ant-menu-title-content,
+.navContentCascader:hover .ant-menu-submenu-arrow::before,
+.navContentCascader:hover .ant-menu-submenu-arrow::after {
+  color: var(--primaryColor) !important;
 }
 
 @media (max-width: 991px) {
@@ -215,7 +244,7 @@ body {
   text-align: center;
   padding: 4px 18px;
   font-size: 18px;
-  margin:0px 15px;
+  margin: 0px 15px;
 }
 
 .welcomeButtonEmpty {
@@ -254,16 +283,15 @@ body {
 @media (max-width: 650px) {
   .welcomeContent h1 {
     font-size: 34px;
-   
   }
   .welcomeContent h4 {
     font-size: 16px;
     padding-bottom: 10px;
   }
   .welcomeButtonEmpty,
-.welcomeButtonFill{
-  font-size: 15px;
-}
+  .welcomeButtonFill {
+    font-size: 15px;
+  }
 }
 
 /*Utility Component*/
@@ -281,46 +309,46 @@ body {
   background-color: white;
 }
 
-.prior{
+.prior {
   background-color: var(--primaryColor);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  height:100%;
+  height: 100%;
   width: 100%;
   text-align: center;
   border-radius: 25px;
 }
 
-.prior a{
-  color:rgb(44, 43, 43);;
+.prior a {
+  color: rgb(44, 43, 43);
   font-size: 15px;
- 
 }
-.prior a:hover,.prior button:hover{
-  color:rgb(44, 43, 43);
-  box-shadow:  0px 0px 2px 2px #f8997a; ;
+.prior a:hover,
+.prior button:hover {
+  color: rgb(44, 43, 43);
+  box-shadow: 0px 0px 2px 2px #f8997a;
   border-radius: 25px !important;
 }
-.prior h2{
-  color:#2b2c2c
+.prior h2 {
+  color: #2b2c2c;
 }
 
-.prior p{
+.prior p {
   font-size: 17px;
   text-overflow: ellipsis;
 }
-.prior button{
-  padding:5px 15px;
+.prior button {
+  padding: 5px 15px;
   border: 2px solid rgb(44, 43, 43);
   background-color: transparent;
 }
 /*Unity Component*/
 .unité {
-  background-color: #fff9f7;
-
+  background-color: rgb(255, 253, 251);
 }
 
 .unitéText h2,
-.unitéText p {
+.unitéText p,
+.equipe > h2 {
   color: #635551;
   text-align: center;
 }
@@ -333,7 +361,8 @@ body {
 .unitéCard {
   position: relative;
   color: #635551;
-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
 .unitéCardIcon {
   background-color: var(--primaryColor);
@@ -418,8 +447,72 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
   color: var(--primaryColor);
 }
 
-/*.footerCol h6 {}*/
+.adminModalButton,
+.adminModal {
+  font-size: 18px;
+}
 
-/*
-  aos
-*/
+.adminModalButton {
+  box-shadow: none !important;
+  background-color: var(--primaryColor);
+  color: white;
+  padding: 6px 15px;
+}
+
+.adminModalButton:hover {
+  color: white;
+  box-shadow: 0px 0px 2px 2px #f8997a !important;
+  border: none !important;
+}
+.adminModal {
+  border-color: var(--primaryColor) !important;
+  color: #595656;
+  margin: 5px 0px;
+  padding: 4px 10px;
+}
+
+.adminProfileSection {
+  padding: 5px 5px;
+  font-size: 10px;
+}
+
+.adminProfileSection:hover {
+  cursor: pointer;
+}
+
+.adminProfileSection:hover p {
+  color: var(--primaryColor);
+}
+
+.adminProfileSection img {
+  border: 1px solid var(--primaryColor);
+  width: 50px;
+  height: 50px;
+}
+.adminProfileSection p {
+  margin: 3px 0;
+}
+
+/*Equipe*/
+
+.equipeMember {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.equipeMember .img {
+  background-image: url("https://media.istockphoto.com/vectors/profile-picture-vector-illustration-vector-id587805078?k=20&m=587805078&s=612x612&w=0&h=lG42-xD-t1uYYficY4DQmHoACnx739xELZsvpyevLgg=");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 170px;
+  background-attachment: fixed;
+}
+.equipeMember:hover {
+  cursor: pointer;
+}
+
+/*Map*/
+.leaflet-container {
+  width: 90vw;
+  height: 70vh;
+}
