--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,9 +43,9 @@
 .containere {
   display: grid;
   height: 100vh;
-  grid-template-columns: 0.8fr 1fr 1fr 1fr;
+  grid-template-columns: 0.3fr 1fr;
   grid-template-rows: 0.2fr 3fr;
   grid-template-areas:
-    "sidebar nav nav nav"
-    "sidebar main main main ";
+    "sidebar nav"
+    "sidebar main";
 }
