--- a/frontend/src/Styles/AdminCommon.css
+++ b/frontend/src/Styles/AdminCommon.css
@@ -141,3 +141,79 @@
 .acteurInfoBtnBack:hover{
   background-color: darkgray;
 }
+
+/*sidenav admin*/
+.sidenav{
+  height:100vh;
+  width:235px;
+  background-image:linear-gradient(#2a1c5a, #4b3a6e);
+box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  color:white;
+  position:sticky;
+  top:0;
+  left:0;
+  z-index:999;
+}
+hr{
+  margin-bottom:10px;
+}
+.title{
+  font-size:18px;
+  padding-top:13px;
+  font-weight:500;
+  text-align: center;
+}
+.actorInfo div p{
+  margin:0px;
+  font-weight: 500;
+  padding:0px 15px;
+}
+
+.actorInfo >p{
+  font-style:italic;
+  font-weight: 300;
+  padding:0px 15px;
+}
+
+.sidenavItem{
+  cursor:pointer;
+  margin:2px 0px;
+  border-radius: 3px;
+}
+.sidenavItem a{
+  font-size:14px;
+  font-weight: bold;
+  color:white;
+  display:flex;
+  align-items:center;
+  padding:7px 7px;
+}
+
+.sidenavItem a:hover{
+  background-color: white;
+  color:#2a1c5a;
+  border-radius: 5px;
+  margin:0px 3px;
+}
+
+@media (width<922px){
+  .sidenav{
+      position:fixed;
+      top:0;
+      right:0;
+  }
+}
+
+
+.sidenavTitle > p{
+  color:gray;
+  font-size: 18px;
+  font-weight: 490;
+}
+
+/* navar admin*/
+.adminNavbar img{
+  height:35px;
+  width:35px;
+  border-radius: 50px;
+}
