--- a/frontend/src/Styles/coordonateurPage/autorisationDeSoutenance.css
+++ b/frontend/src/Styles/coordonateurPage/autorisationDeSoutenance.css
@@ -14,6 +14,9 @@
 top: 0;
 text-align: left;
 }
+.btn-dele{
+    background: red;
+}
 .first-autorisation-title{
     text-align: center;
     color: #595656;
