--- a/frontend/src/components/pageEtudiant/etudiant.css
+++ b/frontend/src/components/pageEtudiant/etudiant.css
@@ -9,9 +9,9 @@ background-image:linear-gradient(rgba(255, 88, 33, 0.35),rgba(255, 88, 33, 0.35)
 background-repeat: no-repeat;
   background-position: center;
   background-size: cover;*/
-  background-color: #2f2f31;
+  background-color: #242323;
     height:100vh;
-    width:20vw;
+    width:21vw;
     color:white;
     position:sticky;
     position: -webkit-sticky;
@@ -19,8 +19,8 @@ background-repeat: no-repeat;
 }
 
 .studentPicture{
-    width:80px;
-    height:80px;
+    width:100px;
+    height:100px;
     border-radius:50% 50% ;
     margin:0;
     border:4px solid rgb(114, 111, 111);
@@ -28,27 +28,26 @@ background-repeat: no-repeat;
 }
 .studentInfo{
     text-align: center;
+    padding-top:5px;
 }
 .studentInfo p{
     margin:0px;
 }
-.dashboardLinks{
-   
-}
+
 .dashboardLinks a{
     text-decoration: none;
     color:white;
     
 }
 .dashboardLinks p{
-    margin: 7px 0px;
-    padding:6px 5px;
+    margin: 3px 6px;
+    padding:12px 12px;
     border-radius: 6px;
     font-size:15px;
 }
 
 .dashboardLinks p:hover{
-    background-color:#f36c3f;
+    color:#ff5821;
 }
 
 .options{
@@ -57,7 +56,7 @@ background-repeat: no-repeat;
 }
 /*etudiant*/
 .studentContent{
-    width:80vw;
+    width:79vw;
 }
 
 @media (max-width:1015px){
@@ -99,14 +98,13 @@ background-repeat: no-repeat;
    background-color: white;
    z-index:4
 }
-.navHeaderElements a{
-    text-decoration: none;
-    color:black
+
+.navHeaderElements img{
+     height:35px;
+  width:35px;
+  border-radius: 50px;
 }
 
-.navHeaderElements a:hover{
-    color:var(--primaryColor);
-}
 
 /*EVOLUTION DOSSIER DE SOUTENANCE*/
 
