--- a/frontend/src/Styles/AdminCommon.css
+++ b/frontend/src/Styles/AdminCommon.css
@@ -145,7 +145,7 @@
 /*sidenav admin*/
 .sidenav{
   height:100vh;
-  width:235px;
+  width:260px;
   background-image:linear-gradient(#2a1c5a, #4b3a6e);
 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   color:white;
@@ -187,13 +187,13 @@ hr{
   display:flex;
   align-items:center;
   padding:10px 7px;
+  margin:0px 3px;
 }
 
 .sidenavItem a:hover{
   background-color: white;
   color:#2a1c5a;
   border-radius: 5px;
-  margin:0px 3px;
 }
 
 @media (width<922px){
@@ -219,6 +219,9 @@ hr{
 }
 
 .adminNavbar, .coordoNavbar{
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; ;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+  position:relative;
 }
+
+
 
